# radicle-vscode-extension

./: CONTRIBUTING.md  package.json  pnpm-lock.yaml
napi/: .gitignore  Cargo.toml  NOTES.md  mv.sh  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml
napi/.github/workflows/: CI.yml
napi/npm/darwin-arm64/: package.json
napi/npm/darwin-x64/: package.json
napi/npm/linux-arm64-musl/: package.json
napi/npm/linux-x64-gnu/: package.json
napi/npm/linux-x64-musl/: package.json
napi/src/: json.rs  lib.rs
src/: extension.ts
src/helpers/: command.ts  config.ts  fetchFromHttpd.ts
src/stores/: patchStore.ts
src/types/: node.ts
src/utils/: classicNodeConnection.ts  napiNodeConnection.ts  nodeConnection.ts
src/ux/: checkOut.ts  patchesView.ts  radicleProject.ts  repo.ts
